# expression-explorer

./: Cargo.toml  Dioxus.toml  index.html
docs/: 404.html  index.html
docs/assets/: expression-explorer-629143f8ff837eef.js  expression-explorer-629143f8ff837eef.js.br  expression-explorer-ab4fc0d36014ecd6.js  expression-explorer-ab4fc0d36014ecd6.js.br  expression-explorer-d040703208dcfebc.js  expression-explorer-d040703208dcfebc.js.br  expression-explorer_bg-1fc166e0ee3a2479.wasm  expression-explorer_bg-1fc166e0ee3a2479.wasm.br  expression-explorer_bg-3cffc159f973064c.wasm  expression-explorer_bg-3cffc159f973064c.wasm.br  expression-explorer_bg-b93712a6d48b14b6.wasm  expression-explorer_bg-b93712a6d48b14b6.wasm.br
src/: ast.rs  children.rs  display.rs  graph.rs  idx.rs  lib.rs  main.rs  pool.rs  rules.rs  search.rs  test_debug_last.rs  test_distrib.rs  test_distrib2.rs
src/parser/: actions.pest  actions.rs  compute.pest  compute.rs  expr.rs  expressions.pest  mod.rs  patterns.pest  patterns.rs  rules.pest  rules.rs  rulesets.pest
src/ui/: app.rs  components.rs  display_components.rs  file_utils.rs  graph_viz.rs  mealy.rs  mod.rs  navigation.rs  primitives.rs  state.rs  styles.rs  svg_writer.rs
src/ui/pages/: debug.rs  explorer.rs  graph.rs  howto.rs  input.rs  mod.rs
tests/: advanced_rule_tests.rs  distribution_tests.rs  integration_tests.rs  parser_tests.rs  pattern_matching_tests.rs  pool_tests.rs  regression_tests.rs  rule_application_tests.rs  test_final_parser.rs
tests/common/: mod.rs
