[package]
name = "expression-explorer"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = "0.6"
dioxus-web = "0.6"
pest = "2.7"
pest_derive = "2.7"
# slab = "0.4" # Replaced with Vec
log = "0.4"
layout-rs = "0.1"
fastrand = "2.0"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
